--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,22 @@
     <string name="firebase_password" translatable="false">password</string>
     <string name="title_activity_display">Map</string>
 
+
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password </string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="user_name">Username</string>
+    <string name="retype_password">Retype password</string>
+    <string name="phone_no">Phone no.</string>
+    <string name="promt_username">Username</string>
+    <string name="prompt_username">Username</string>
+
 </resources>
