Completed the updating of presences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="prompt_username">Username</string>
     <string name="log_out">Log out</string>
     <string name="profile">Profile</string>
+    <string name="stop_tracking">Stop Tracking</string>
 
 </resources>
